# sot_ur

./: .gitignore  CMakeLists.txt  manifest.xml  package.xml
include/: ur_device.h  ur_sot_controller.h
launch/: exp_youbot.launch  sot_ur10.launch  sot_ur5.launch  test.launch  ubot_test.launch  ur_test.launch  youbot.launch
script/: robot_pose_publisher
src/: CMakeLists.txt  demo.py  device_demo.py  ur.hh  ur_device.cpp  ur_sot_contoller.cpp
src/dynamic_graph/sot/dynamics/: mobile_robot.py
src/dynamic_graph/sot/ur/: dynamic_graph.sot.core  mobile_robot_demo.py  robot.py  yb_robosimudemo.py  youbot-d.py  youbot.py
